some hover animations and media queries

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pilar Menéndez Fernandez</title>
 
     <link rel="stylesheet" href="style.css">
     <style>
@@ -84,8 +84,9 @@
     </main>
 
     <footer>
-        <p>Designed and developed by <a href="https://cuicui.dev">Dmitry Ryzhenkov</a> © 2023 </p>
-        <p>Almería (Spain)</p>
+        <p>Pilar Menéndez Fernandez, Almería (Spain)</p>
+        <br>
+        <p>Designed and built by <a href="https://cuicui.dev">Dmitry Ryzhenkov</a> © 2023 </p>
     </footer>
     
 </body>
