--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pilar Menéndez Fernandez</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="web.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
