--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pilar Menéndez Fernandez</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="web.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
@@ -84,8 +85,9 @@
     </main>
 
     <footer>
-        <p>Designed and developed by <a href="https://cuicui.dev">Dmitry Ryzhenkov</a> © 2023 </p>
-        <p>Almería (Spain)</p>
+        <p>Pilar Menéndez Fernandez, Almería (Spain)</p>
+        <br>
+        <p>Designed and built by <a href="https://cuicui.dev">Dmitry Ryzhenkov</a> © 2023 </p>
     </footer>
     
 </body>
